# src/iM.Cloud.Application/Files/MoveFileRequest.cs
@@ -1,0 +1,6 @@
+namespace iM.Cloud.Application.Files;
+
+public sealed class MoveFileRequest
+{
+    public Guid? ParentId { get; set; }
+}
