# src/iM.Cloud.Application/Files/RenameFileRequest.cs
@@ -1,0 +1,6 @@
+namespace iM.Cloud.Application.Files;
+
+public sealed class RenameFileRequest
+{
+    public string Name { get; set; } = null!;
+}
